syntax = "proto3";

package xray.transport.internet.splithttp;
option csharp_namespace = "Xray.Transport.Internet.SplitHttp";
option go_package = "github.com/xtls/xray-core/transport/internet/splithttp";
option java_package = "com.xray.transport.internet.splithttp";
option java_multiple_files = true;

import "transport/internet/config.proto";

message Config {
  string host = 1;
  string path = 2;
  string mode = 3;
  map<string, string> headers = 4;
  RandRangeConfig xPaddingBytes = 5;
  bool noGRPCHeader = 6;
  bool noSSEHeader = 7;
  RandRangeConfig scMaxEachPostBytes = 8;
  RandRangeConfig scMinPostsIntervalMs = 9;
  int64 scMaxBufferedPosts = 10;
  int64 keepAlivePeriod = 11;
  Multiplexing xmux = 12;
  xray.transport.internet.StreamConfig downloadSettings = 13;
}

message RandRangeConfig {
    int32 from = 1;
    int32 to = 2;
}

message Multiplexing {
  RandRangeConfig maxConcurrency = 1;
  RandRangeConfig maxConnections = 2;
  RandRangeConfig cMaxReuseTimes = 3;
  RandRangeConfig cMaxLifetimeMs = 4;
}
